--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "433e1d1b",
+   "execution_count": 58,
+   "id": "d903b601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "2ca2e174",
+   "execution_count": 59,
+   "id": "84614503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "6599384a",
+   "execution_count": 64,
+   "id": "a19b7468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +50,13 @@
     "        ret[tuple(d[kname])] = d[vname]\n",
     "    return ret\n",
     "def parse_pairwise_ic(name, measure):\n",
-    "    tname = common_parse(name, \"Pairwise Consistency\")\n",
+    "    tname = common_parse(name, \"Pairwise Inconsistency\")\n",
     "    print(tname)\n",
     "    pairwise = listdct_to_dct(measure[\"inconsist_pairwise\"], kname=\"compare\", vname=\"consistency\")\n",
     "    idx = measure[\"index\"]\n",
     "    l = len(idx)\n",
     "    _idx_name = [\"Model {}\".format(i) for i in idx]\n",
-    "    _df = pd.DataFrame(index = _idx_name, columns = _idx_name[1:]).fillna(\"\")\n",
+    "    _df = pd.DataFrame(index = _idx_name[:-1], columns = _idx_name[1:]).fillna(\"\")\n",
     "    for i in range(l):\n",
     "        for j in range(i+1, l):\n",
     "            _df.loc[_idx_name[i], _idx_name[j]] = pairwise[(idx[i],idx[j])]\n",
@@ -61,21 +70,21 @@
     "        print(measure[\"acc_list\"][i], end=\"\\t\")\n",
     "\n",
     "def parse_total(name, measure):\n",
-    "    print(common_parse(name, \"Consistency Together\"))\n",
+    "    print(common_parse(name, \"Inconsistency Together\"))\n",
     "    print(measure[\"inconsist_tot\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "bccb44b3",
+   "execution_count": 67,
+   "id": "4cda4672",
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_result(evaluator):\n",
     "    e = evaluator\n",
     "    print(\"=\"*50)\n",
-    "    for name in e.names:\n",
+    "    for name in e.names[:-3]:\n",
     "        parse_pairwise_ic(name, e._measure_pairwise(name))\n",
     "        print()\n",
     "        parse_acc(name,e._measure_acc(name))\n",
@@ -86,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "3869ccab",
+   "execution_count": 68,
+   "id": "e3f99fdd",
    "metadata": {},
    "outputs": [
     {
@@ -95,173 +104,131 @@
      "output_type": "stream",
      "text": [
       "==================================================\n",
-      "Result of Task 0 on fold test Pairwise Consistency:\n",
-      "         Model 1   Model 2   Model 3   Model 4\n",
-      "Model 0  0.11875  0.059167  0.200417  0.169167\n",
-      "Model 1           0.030833  0.124167  0.127083\n",
-      "Model 2                     0.180833  0.166667\n",
-      "Model 3                               0.090833\n",
-      "Model 4                                       \n",
+      "Result of Task 0 on fold test Pairwise Inconsistency:\n",
+      "          Model 1   Model 2   Model 3   Model 4\n",
+      "Model 0  0.082917  0.092917   0.06375   0.11875\n",
+      "Model 1            0.064167  0.037083  0.102083\n",
+      "Model 2                      0.039167   0.10125\n",
+      "Model 3                                 0.11125\n",
       "\n",
       "Result of Task 0 on fold test Accuracy Per Step:\n",
-      "0.8545833333333334\t0.8554166666666667\t0.9325\t0.7695833333333333\t0.7916666666666666\t\n",
-      "Result of Task 0 on fold test Consistency Together:\n",
-      "0.14083333333333334\n",
+      "0.9425\t0.8970833333333333\t0.8845833333333334\t0.92125\t0.85875\t\n",
+      "Result of Task 0 on fold test Inconsistency Together:\n",
+      "0.19916666666666666\n",
       "\n",
-      "Result of Task 0 on fold val Pairwise Consistency:\n",
-      "        Model 1   Model 2   Model 3   Model 4\n",
-      "Model 0  0.1075    0.0675  0.183333  0.170833\n",
-      "Model 1          0.031667  0.125833    0.1275\n",
-      "Model 2                    0.163333  0.155833\n",
-      "Model 3                              0.105833\n",
-      "Model 4                                      \n",
+      "Result of Task 0 on fold val Pairwise Inconsistency:\n",
+      "          Model 1   Model 2   Model 3   Model 4\n",
+      "Model 0  0.080833  0.084167  0.060833  0.114167\n",
+      "Model 1               0.065  0.043333  0.096667\n",
+      "Model 2                          0.04  0.095833\n",
+      "Model 3                                0.110833\n",
       "\n",
       "Result of Task 0 on fold val Accuracy Per Step:\n",
-      "0.8766666666666667\t0.8691666666666666\t0.9216666666666666\t0.7858333333333334\t0.7908333333333334\t\n",
-      "Result of Task 0 on fold val Consistency Together:\n",
-      "0.11916666666666667\n",
+      "0.9475\t0.9033333333333333\t0.8958333333333334\t0.9266666666666666\t0.8666666666666667\t\n",
+      "Result of Task 0 on fold val Inconsistency Together:\n",
+      "0.19916666666666666\n",
       "\n",
-      "Result of Task 0 on fold train Pairwise Consistency:\n",
+      "Result of Task 0 on fold train Pairwise Inconsistency:\n",
       "          Model 1   Model 2   Model 3   Model 4\n",
-      "Model 0  0.033333  0.020476  0.103333   0.06631\n",
-      "Model 1            0.020595  0.105238  0.072976\n",
-      "Model 2                      0.109643  0.075238\n",
-      "Model 3                                0.057262\n",
-      "Model 4                                        \n",
+      "Model 0  0.012262  0.026071  0.015476  0.040595\n",
+      "Model 1            0.026429  0.015833  0.041905\n",
+      "Model 2                      0.014524  0.040476\n",
+      "Model 3                                0.041786\n",
       "\n",
       "Result of Task 0 on fold train Accuracy Per Step:\n",
-      "0.8797619047619047\t0.9641666666666666\t0.9780952380952381\t0.8839285714285714\t0.9202380952380952\t\n",
-      "Result of Task 0 on fold train Consistency Together:\n",
-      "0.12023809523809524\n",
+      "0.9844047619047619\t0.9876190476190476\t0.9726190476190476\t0.9840476190476191\t0.9576190476190476\t\n",
+      "Result of Task 0 on fold train Inconsistency Together:\n",
+      "0.06666666666666667\n",
       "\n",
-      "Result of Task 1 on fold test Pairwise Consistency:\n",
+      "Result of Task 1 on fold test Pairwise Inconsistency:\n",
       "          Model 2   Model 3   Model 4\n",
-      "Model 1  0.274167   0.17375  0.381667\n",
-      "Model 2            0.097083  0.233333\n",
-      "Model 3                      0.288333\n",
-      "Model 4                              \n",
+      "Model 1  0.152083  0.195833   0.30625\n",
+      "Model 2             0.15125  0.236667\n",
+      "Model 3                       0.20875\n",
       "\n",
       "Result of Task 1 on fold test Accuracy Per Step:\n",
-      "0.8545833333333334\t0.6229166666666667\t0.7358333333333333\t0.50875\t\n",
-      "Result of Task 1 on fold test Consistency Together:\n",
-      "0.08666666666666667\n",
+      "0.8175\t0.7391666666666666\t0.7075\t0.5754166666666667\t\n",
+      "Result of Task 1 on fold test Inconsistency Together:\n",
+      "0.2604166666666667\n",
       "\n",
-      "Result of Task 1 on fold val Pairwise Consistency:\n",
+      "Result of Task 1 on fold val Pairwise Inconsistency:\n",
       "          Model 2   Model 3   Model 4\n",
-      "Model 1  0.260833    0.1625  0.353333\n",
-      "Model 2            0.084167  0.219167\n",
-      "Model 3                        0.2825\n",
-      "Model 4                              \n",
+      "Model 1  0.144167  0.189167     0.325\n",
+      "Model 2               0.145      0.26\n",
+      "Model 3                      0.225833\n",
       "\n",
       "Result of Task 1 on fold val Accuracy Per Step:\n",
-      "0.8358333333333333\t0.62\t0.7358333333333333\t0.5183333333333333\t\n",
-      "Result of Task 1 on fold val Consistency Together:\n",
-      "0.09583333333333334\n",
+      "0.8241666666666667\t0.745\t0.7175\t0.5508333333333333\t\n",
+      "Result of Task 1 on fold val Inconsistency Together:\n",
+      "0.23916666666666667\n",
       "\n",
-      "Result of Task 1 on fold train Pairwise Consistency:\n",
-      "          Model 2   Model 3   Model 4\n",
-      "Model 1  0.128095  0.034881  0.234286\n",
-      "Model 2            0.030476  0.205714\n",
-      "Model 3                      0.227619\n",
-      "Model 4                              \n",
+      "Result of Task 1 on fold train Pairwise Inconsistency:\n",
+      "        Model 2   Model 3   Model 4\n",
+      "Model 1   0.035  0.047381  0.162381\n",
+      "Model 2          0.045833  0.159643\n",
+      "Model 3                     0.15369\n",
       "\n",
       "Result of Task 1 on fold train Accuracy Per Step:\n",
-      "0.9809523809523809\t0.87\t0.9622619047619048\t0.7586904761904761\t\n",
-      "Result of Task 1 on fold train Consistency Together:\n",
-      "0.01892857142857143\n",
+      "0.9803571428571428\t0.9642857142857143\t0.9514285714285714\t0.8329761904761904\t\n",
+      "Result of Task 1 on fold train Inconsistency Together:\n",
+      "0.08654761904761905\n",
       "\n",
-      "Result of Task 2 on fold test Pairwise Consistency:\n",
-      "          Model 3   Model 4\n",
-      "Model 2  0.106667  0.062917\n",
-      "Model 3            0.073333\n",
-      "Model 4                    \n",
+      "Result of Task 2 on fold test Pairwise Inconsistency:\n",
+      "         Model 3   Model 4\n",
+      "Model 2  0.16125  0.105833\n",
+      "Model 3           0.067917\n",
       "\n",
       "Result of Task 2 on fold test Accuracy Per Step:\n",
-      "0.6495833333333333\t0.70625\t0.8020833333333334\t\n",
-      "Result of Task 2 on fold test Consistency Together:\n",
-      "0.24791666666666667\n",
+      "0.7\t0.6429166666666667\t0.7795833333333333\t\n",
+      "Result of Task 2 on fold test Inconsistency Together:\n",
+      "0.30875\n",
       "\n",
-      "Result of Task 2 on fold val Pairwise Consistency:\n",
+      "Result of Task 2 on fold val Pairwise Inconsistency:\n",
       "          Model 3   Model 4\n",
-      "Model 2  0.115833  0.070833\n",
-      "Model 3               0.075\n",
-      "Model 4                    \n",
+      "Model 2  0.150833     0.095\n",
+      "Model 3            0.066667\n",
       "\n",
       "Result of Task 2 on fold val Accuracy Per Step:\n",
-      "0.6533333333333333\t0.7083333333333334\t0.8116666666666666\t\n",
-      "Result of Task 2 on fold val Consistency Together:\n",
-      "0.25916666666666666\n",
+      "0.6808333333333333\t0.6441666666666667\t0.7783333333333333\t\n",
+      "Result of Task 2 on fold val Inconsistency Together:\n",
+      "0.315\n",
       "\n",
-      "Result of Task 2 on fold train Pairwise Consistency:\n",
+      "Result of Task 2 on fold train Pairwise Inconsistency:\n",
       "          Model 3   Model 4\n",
-      "Model 2  0.057024   0.02881\n",
-      "Model 3            0.035476\n",
-      "Model 4                    \n",
+      "Model 2  0.076548      0.05\n",
+      "Model 3            0.044286\n",
       "\n",
       "Result of Task 2 on fold train Accuracy Per Step:\n",
-      "0.8539285714285715\t0.9270238095238095\t0.9613095238095238\t\n",
-      "Result of Task 2 on fold train Consistency Together:\n",
-      "0.14511904761904762\n",
+      "0.9310714285714285\t0.9141666666666667\t0.9479761904761905\t\n",
+      "Result of Task 2 on fold train Inconsistency Together:\n",
+      "0.13773809523809524\n",
       "\n",
-      "Result of Task 3 on fold test Pairwise Consistency:\n",
-      "          Model 4\n",
-      "Model 3  0.152083\n",
-      "Model 4          \n",
+      "Result of Task 3 on fold test Pairwise Inconsistency:\n",
+      "        Model 4\n",
+      "Model 3  0.2025\n",
       "\n",
       "Result of Task 3 on fold test Accuracy Per Step:\n",
-      "0.7058333333333333\t0.7108333333333333\t\n",
-      "Result of Task 3 on fold test Consistency Together:\n",
-      "0.15708333333333332\n",
+      "0.755\t0.6125\t\n",
+      "Result of Task 3 on fold test Inconsistency Together:\n",
+      "0.06\n",
       "\n",
-      "Result of Task 3 on fold val Pairwise Consistency:\n",
+      "Result of Task 3 on fold val Pairwise Inconsistency:\n",
       "          Model 4\n",
-      "Model 3  0.158333\n",
-      "Model 4          \n",
+      "Model 3  0.200833\n",
       "\n",
       "Result of Task 3 on fold val Accuracy Per Step:\n",
-      "0.7225\t0.7041666666666667\t\n",
-      "Result of Task 3 on fold val Consistency Together:\n",
-      "0.14\n",
+      "0.7425\t0.6133333333333333\t\n",
+      "Result of Task 3 on fold val Inconsistency Together:\n",
+      "0.07166666666666667\n",
       "\n",
-      "Result of Task 3 on fold train Pairwise Consistency:\n",
+      "Result of Task 3 on fold train Pairwise Inconsistency:\n",
       "          Model 4\n",
-      "Model 3  0.148929\n",
-      "Model 4          \n",
+      "Model 3  0.189405\n",
       "\n",
       "Result of Task 3 on fold train Accuracy Per Step:\n",
-      "0.8677380952380952\t0.83\t\n",
-      "Result of Task 3 on fold train Consistency Together:\n",
-      "0.11119047619047619\n",
-      "\n",
-      "Result of Task 4 on fold test Pairwise Consistency:\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [Model 4]\n",
-      "\n",
-      "Result of Task 4 on fold test Accuracy Per Step:\n",
-      "0.80875\t\n",
-      "Result of Task 4 on fold test Consistency Together:\n",
-      "0.0\n",
-      "\n",
-      "Result of Task 4 on fold val Pairwise Consistency:\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [Model 4]\n",
-      "\n",
-      "Result of Task 4 on fold val Accuracy Per Step:\n",
-      "0.8158333333333333\t\n",
-      "Result of Task 4 on fold val Consistency Together:\n",
-      "0.0\n",
-      "\n",
-      "Result of Task 4 on fold train Pairwise Consistency:\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [Model 4]\n",
-      "\n",
-      "Result of Task 4 on fold train Accuracy Per Step:\n",
-      "0.8957142857142857\t\n",
-      "Result of Task 4 on fold train Consistency Together:\n",
-      "0.0\n",
+      "0.9069047619047619\t0.7697619047619048\t\n",
+      "Result of Task 3 on fold train Inconsistency Together:\n",
+      "0.05226190476190476\n",
       "\n"
      ]
     }
@@ -275,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cc0538ad",
+   "id": "a279ae71",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea108006",
+   "id": "fd21814e",
    "metadata": {},
    "outputs": [],
    "source": []
