--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -81,6 +81,7 @@
     "    e = evaluator\n",
     "    print(\"=\"*50)\n",
     "    rec[bname] = []\n",
+    "    print(bname)\n",
     "    for name in e.names[:-3]:\n",
     "        parse_pairwise_ic(name, e._measure_pairwise(name))\n",
     "        print()\n",
@@ -91,7 +92,8 @@
     "        rec[bname].append((true_name,tot,acc))\n",
     "        print(tot)\n",
     "def draw_pic(picname):\n",
-    "    names = [\"vanilla\",\"lwf\", \"ewc\"]#,\"vanilla_scratch\",\"lwf_scratch\", \"ewc_scratch\"]\n",
+    "    \n",
+    "    names = [\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"]#, \"lwf_scratch\", \"ewc_scratch\"]\n",
     "    tasks = []\n",
     "    vals = []\n",
     "    comps = []\n",
@@ -104,15 +106,17 @@
     "            tasks.append(task)\n",
     "            accs.append(acc)\n",
     "            vals.append(val)\n",
-    "    plt.figure(figsize=(10,10))\n",
+    "    plt.figure(figsize=(20,10))\n",
+    "    plt.subplot(1,2,1)\n",
     "    df = pd.DataFrame({\"Task\":tasks, \"Method\":comps, \"Inconsistency\":vals, \"Acc\":accs})\n",
     "    pd.melt(df, id_vars=['Task'], value_vars=['Inconsistency'])\n",
     "    sns.barplot(x = 'Task', y = 'Inconsistency', data = df, hue=\"Method\")\n",
     "    plt.ylabel('Inconsistency')\n",
     "    plt.title('Inconsistency over different baselins')\n",
-    "    plt.savefig(\"Inconsistency_{}.png\".format(picname))\n",
-    "    plt.show()\n",
-    "    plt.figure(figsize=(10,10))\n",
+    "    #plt.savefig(\"Inconsistency_{}.png\".format(picname))\n",
+    "    #plt.show()\n",
+    "    #plt.figure(figsize=(10,10))\n",
+    "    plt.subplot(1,2,2)\n",
     "    df = pd.DataFrame({\"Task\":tasks, \"Method\":comps, \"Inconsistency\":vals, \"Acc\":accs})\n",
     "    pd.melt(df, id_vars=['Task'], value_vars=['Acc'])\n",
     "    sns.barplot(x = 'Task', y = 'Acc', data = df, hue=\"Method\")\n",
@@ -133,14 +137,14 @@
     "    rec = {}\n",
     "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"vanilla\")\n",
+    "    read_result(epps, \"vanilla_finetune\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"lwf\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps,\"ewc\")\n",
-    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"lwf_scratch\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
@@ -149,17 +153,17 @@
     "    rec = {}\n",
     "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"vanilla\")\n",
+    "    read_result(epps, \"vanilla_finetune\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"lwf\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    read_result(epps,\"ewc\")\n",
+    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"lwf_scratch\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc_scratch\")\n",
+    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
     "    draw_pic(\"Data_Inc_seed_{}\".format(i))    "
    ]
   },
