--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e103612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbac808a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7b70c0f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +65,7 @@
     "    for i in range(len(measure[\"index\"])):\n",
     "        print(measure[\"acc_list\"][i], end=\"\\t\")\n",
     "    print(\"avg acc\", np.mean(measure[\"acc_list\"]))\n",
-    "    return measure[\"acc_list\"][-1]#np.mean(measure[\"acc_list\"])\n",
+    "    return np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][-1]#\n",
     "\n",
     "def parse_total(name, measure):\n",
     "    print(common_parse(name, \"Inconsistency Together\"))\n",
@@ -73,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7e3b831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +106,8 @@
     "    for name in names:\n",
     "        for v in rec[name]:\n",
     "            task, val, acc = v\n",
+    "            if task.find(\"val\")>=0:\n",
+    "                continue\n",
     "            comps.append(name)\n",
     "            tasks.append(task)\n",
     "            accs.append(acc)\n",
@@ -129,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d8faf16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,12 +160,16 @@
     "    rec = {}\n",
     "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"vanilla_finetune\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"lwf\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"vanilla_scratch\")\n",
     "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
     "    read_result(epps,\"ewc\")\n",
     "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    read_result(epps, \"lwf_scratch\")\n",
@@ -170,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bd8bb780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dcc36cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cdc0e19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -196,6 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49e3d3fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
