--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -97,21 +97,22 @@
     "        print(tot)\n",
     "def draw_pic(picname):\n",
     "    \n",
-    "    names = [\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"]#, \"lwf_scratch\", \"ewc_scratch\"]\n",
+    "    names = [ \"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"]#, \"lwf_scratch\", \"ewc_scratch\", \"vanilla_scratch\",]\n",
     "    tasks = []\n",
     "    vals = []\n",
     "    comps = []\n",
     "    accs = []\n",
     "    print(rec)\n",
-    "    for name in names:\n",
-    "        for v in rec[name]:\n",
-    "            task, val, acc = v\n",
-    "            if task.find(\"val\")>=0:\n",
-    "                continue\n",
-    "            comps.append(name)\n",
-    "            tasks.append(task)\n",
-    "            accs.append(acc)\n",
-    "            vals.append(val)\n",
+    "    for keyword in [\"train\", \"test\"]:\n",
+    "        for name in names:\n",
+    "            for v in rec[name]:\n",
+    "                task, val, acc = v\n",
+    "                if task.find(keyword)<0:\n",
+    "                    continue\n",
+    "                comps.append(name)\n",
+    "                tasks.append(task)\n",
+    "                accs.append(acc)\n",
+    "                vals.append(val)\n",
     "    plt.figure(figsize=(20,10))\n",
     "    plt.subplot(1,2,1)\n",
     "    df = pd.DataFrame({\"Task\":tasks, \"Method\":comps, \"Inconsistency\":vals, \"Acc\":accs})\n",
@@ -140,6 +141,37 @@
    "outputs": [],
    "source": [
     "epps = EPPS()\n",
+    "for i in range(1):\n",
+    "    rec = {}\n",
+    "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
+    "    read_result(epps, \"vanilla_finetune\")\n",
+    "    \n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
+    "    read_result(epps, \"lwf\")\n",
+    "    \n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup_#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
+    "    read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
+    "    \n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
+    "    read_result(epps, \"lwf_Correct_Subset\")  \n",
+    "    \n",
+    "    #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    #epps.set_order(\"sequential\")\n",
+    "    #read_result(epps, \"vanilla_scratch\")\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.set_order(\"sequential\")\n",
+    "    read_result(epps,\"ewc\")\n",
+    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    read_result(epps, \"lwf_scratch\")\n",
+    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "    draw_pic(\"Data_Inc_seed_{}\".format(i))   \n",
+    "break\n",
     "for i in range(1):\n",
     "    rec = {}\n",
     "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
