--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print1(*arg, **karg):\n",
+    "def print(*arg, **karg):\n",
     "    pass\n",
     "\n",
     "def common_parse(name, add):\n",
@@ -144,11 +144,11 @@
     "for i in range(1):\n",
     "    rec = {}\n",
     "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"vanilla_finetune\")\n",
     "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"lwf\")\n",
     "    \n",
@@ -156,14 +156,14 @@
     "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
     "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    epps.set_order(\"sequential\")\n",
     "    read_result(epps, \"lwf_Correct_Subset\")  \n",
     "    \n",
     "    #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    #epps.set_order(\"sequential\")\n",
     "    #read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "    epps.set_order(\"sequential\")\n",
     "    read_result(epps,\"ewc\")\n",
     "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
