Add adv training module. Change param, fix maybe a bug.

--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e103612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbac808a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +27,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b70c0f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print(*arg, **karg):\n",
+    "printn = print\n",
+    "def print1(*arg, **karg):\n",
     "    pass\n",
     "\n",
     "def common_parse(name, add):\n",
@@ -66,7 +64,7 @@
     "    for i in range(len(measure[\"index\"])):\n",
     "        print(measure[\"acc_list\"][i], end=\"\\t\")\n",
     "    print(\"avg acc\", np.mean(measure[\"acc_list\"]))\n",
-    "    return np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][-1]#\n",
+    "    return np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][0]#np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][-1]#\n",
     "\n",
     "def parse_total(name, measure):\n",
     "    print(common_parse(name, \"Inconsistency Together\"))\n",
@@ -86,14 +84,21 @@
     "    dn = os.listdir(\"results\")\n",
     "    for s in lst:\n",
     "        dn = filter_lst(dn, s)\n",
-    "    assert len(dn) == 1,\"multiple result\" + str(dn)\n",
-    "    return os.path.join(\"results\", dn[0], \"Seed0\")"
+    "    if len(dn) > 1:\n",
+    "        print(\"multiple result\" + str(dn))\n",
+    "    mx_sz = 1000\n",
+    "    mx_id = 0\n",
+    "    for idx, _d in enumerate(dn):\n",
+    "        if len(_d) < mx_sz:\n",
+    "            mx_sz = len(_d)\n",
+    "            mx_id = idx\n",
+    "    printn(dn[mx_id])\n",
+    "    return os.path.join(\"results\", dn[mx_id], \"Seed0\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7e3b831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +135,7 @@
     "                tasks.append(task)\n",
     "                accs.append(acc)\n",
     "                vals.append(val)\n",
-    "    plt.figure(figsize=(20,10))\n",
+    "    plt.figure(figsize=(25,10))\n",
     "    plt.subplot(1,2,1)\n",
     "    df = pd.DataFrame({\"Task\":tasks, \"Method\":comps, \"Inconsistency\":vals, \"Acc\":accs})\n",
     "    pd.melt(df, id_vars=['Task'], value_vars=['Inconsistency'])\n",
@@ -153,47 +158,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d8faf16",
    "metadata": {},
    "outputs": [],
    "source": [
     "epps = EPPS()\n",
-    "case = 2\n",
+    "case = 1\n",
     "if case  == 1:\n",
-    "    common_filter = [\"cifar10\", \"small\", \"ResNet18_1.0e-02\",\"CTdata\", \"CvgS100\"]\n",
+    "    common_filter = [\"cifar10\", \"Aug_CF\", \"ResNet18_1.0e-03\",\"CTdata\", \"CvgD1.00e+00_CvgT1.000000e-03\",\"FixInit\"]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
     "        \n",
-    "        #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.load(sname([\"vanilla\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_finetune\")\n",
     "        \n",
-    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.load(sname([\"#Aug_CF\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_Aug\")\n",
+    "\n",
+    "        epps.load(sname([\"#Aug_CF_ADV\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_Aug+Adv\")\n",
+    "        \n",
+    "        #epps.load(sname([\"scratch\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_scratch\")\n",
+    "        \n",
+    "        epps.load(sname([\"#lwf1.00e+00_DS\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf\")\n",
     "\n",
-    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.load(sname([\"#lwf1.00e+00_unsup\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
     "\n",
-    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.load(sname([\"#lwf1.00e+00#corrset\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Correct_Subset\")  \n",
     "\n",
-    "        #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "        #epps.set_order(\"sequential\")\n",
-    "        #read_result(epps, \"vanilla_scratch\")\n",
-    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.load(sname([\"#ewc\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps,\"ewc\")\n",
-    "        \n",
-    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
-    "        read_result(epps, \"lwf_scratch\")\n",
-    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
-    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
-    "                 names=[ \"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])   \n",
+    "                 names=[ \"vanilla_finetune\", \"vanilla_Aug\", \"vanilla_Aug+Adv\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])   \n",
     "elif case == 2:\n",
     "    common_filter = [\"cifar10\", \"small\", \"ResNet18_1.0e-03\",\"CTdata\", \"CvgD9.90e-01_CvgT1.000000e-03\"]\n",
     "    for i in range(1):\n",
@@ -219,16 +226,10 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Correct_Subset\")  \n",
     "\n",
-    "        #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "        #epps.set_order(\"sequential\")\n",
-    "        #read_result(epps, \"vanilla_scratch\")\n",
     "        epps.load(sname([\"#ewc\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps,\"ewc\")\n",
-    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "        read_result(epps, \"lwf_scratch\")\n",
-    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
     "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])    \n",
     "elif case ==3:\n",
@@ -276,17 +277,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8bb780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from cl.utils import get_fixed_random_generator\n",
+    "import itertools\n",
+    "print(list(itertools.islice(get_fixed_random_generator(10,1), 5)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dcc36cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cdc0e19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,7 +305,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49e3d3fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
