Add interpolation logic.

--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -158,6 +158,42 @@
     "    plt.ylabel('Acc')\n",
     "    plt.title('Acc over different baselins')\n",
     "    plt.savefig(\"Acc_{}.png\".format(picname))\n",
+    "    plt.show()\n",
+    "def draw_pic_interpolate(picname, names):\n",
+    "    \n",
+    "    #names = [ ]#, \"lwf_scratch\", \"ewc_scratch\", \"vanilla_scratch\",]\n",
+    "    tasks = []\n",
+    "    vals = []\n",
+    "    comps = []\n",
+    "    accs = []\n",
+    "    print(rec)\n",
+    "    for keyword in [\"test\"]:\n",
+    "        for name in names:\n",
+    "            for v in rec[name]:\n",
+    "                task, val, acc = v\n",
+    "                #print(task)\n",
+    "                if task.find(keyword)<0 or task.find(\"0_\")<0:\n",
+    "                    continue\n",
+    "                comps.append(name)\n",
+    "                tasks.append(task)\n",
+    "                accs.append(acc)\n",
+    "                vals.append(val)\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    #plt.subplot(1,2,1)\n",
+    "    #df = pd.DataFrame({\"Task\":tasks, \"Method\":comps, \"Inconsistency\":vals, \"Acc\":accs})\n",
+    "    plt.plot(mid_lst, vals, label=\"inconsistency\")\n",
+    "    for idx, (a,b) in enumerate(zip(mid_lst, vals)): \n",
+    "        if idx % 2==0:\n",
+    "            plt.text(a, b, \"{:.2f}\".format(b))\n",
+    "    plt.plot(mid_lst, accs, label=\"accuracy\")\n",
+    "    for idx, (a,b) in enumerate(zip(mid_lst, accs)): \n",
+    "        if idx % 2==0:\n",
+    "            plt.text(a, b, \"{:.2f}\".format(b))    \n",
+    "    #sns.barplot(x = 'Task', y = 'Inconsistency', data = df, hue=\"Method\")\n",
+    "    #plt.ylabel('Inconsistency')\n",
+    "    plt.title('Inconsistency and accuracy with interpolation')\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"Interpolation_{}.png\".format(picname))\n",
     "    plt.show()"
    ]
   },
@@ -168,7 +204,7 @@
    "outputs": [],
    "source": [
     "epps = EPPS()\n",
-    "case = 1\n",
+    "case = 5\n",
     "if case  == 1:\n",
     "    common_filter = [\"cifar10\", \"small\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\"]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
@@ -306,7 +342,17 @@
     "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
     "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
-    "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"]) "
+    "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"])\n",
+    "elif case == 5:\n",
+    "        \n",
+    "    common_filter = [\"cifar10\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\", \"small\"]#\"CvgS200\"]\"small\",\n",
+    "    rec = {}\n",
+    "    mid_lst = range(1,20)\n",
+    "    epps.load(sname([\"interpolate\"]))#, \"small_\"]\n",
+    "    for i in range(1,20):\n",
+    "        epps.set_order(\"set\", val=[0,i,20])\n",
+    "        read_result(epps, str(i))\n",
+    "    draw_pic_interpolate(\"Interpolate_Data_Inc_seed_0\", [str(i) for i in mid_lst])"
    ]
   },
   {
