Add imagnet dataset, add lwf sep loss baseline. Fix a bug in historical average model.

--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -52,19 +52,21 @@
     "    l = len(idx)\n",
     "    _idx_name = [\"Model {}\".format(i) for i in idx]\n",
     "    _df = pd.DataFrame(index = _idx_name[:-1], columns = _idx_name[1:]).fillna(\"\")\n",
+    "    ret = []\n",
     "    for i in range(l):\n",
     "        for j in range(i+1, l):\n",
-    "            _df.loc[_idx_name[i], _idx_name[j]] = pairwise[(idx[i],idx[j])]\n",
+    "            _df.loc[_idx_name[i], _idx_name[j]] = (pairwise[(idx[i],idx[j])])\n",
+    "            ret.append(pairwise[(idx[i],idx[j])])\n",
     "    #_df.style.set_caption(tname)\n",
     "    print(_df)\n",
-    "    return _df\n",
+    "    return ret\n",
     "\n",
     "def parse_acc(name, measure):\n",
     "    print(common_parse(name, \"Accuracy Per Step\"))\n",
     "    for i in range(len(measure[\"index\"])):\n",
     "        print(measure[\"acc_list\"][i], end=\"\\t\")\n",
     "    print(\"avg acc\", np.mean(measure[\"acc_list\"]))\n",
-    "    return np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][0]#np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][-1]#\n",
+    "    return measure[\"acc_list\"][0]#np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][0]#np.mean(measure[\"acc_list\"])#measure[\"acc_list\"][-1]#\n",
     "\n",
     "def parse_total(name, measure):\n",
     "    print(common_parse(name, \"Inconsistency Together\"))\n",
@@ -75,7 +77,7 @@
     "    rst = []\n",
     "    for _s in lst:\n",
     "        if s[0] == \"-\":\n",
-    "            if _s.find(s)==-1:\n",
+    "            if _s.find(s[1:])==-1:\n",
     "                rst.append(_s)\n",
     "        else:\n",
     "            if _s.find(s)>=0:\n",
@@ -109,19 +111,21 @@
    "outputs": [],
    "source": [
     "def read_result(evaluator, bname):\n",
-    "    global rec\n",
+    "    global rec, rec_step\n",
     "    e = evaluator\n",
     "    print(\"=\"*50)\n",
     "    rec[bname] = []\n",
     "    print(bname)\n",
+    "    print(\"add data\", e.addtional_data)\n",
     "    for name in e.names:\n",
-    "        parse_pairwise_ic(name, e._measure_pairwise(name))\n",
+    "        pair_incon = parse_pairwise_ic(name, e._measure_pairwise(name))\n",
     "        print()\n",
     "        acc = parse_acc(name,e._measure_acc(name))\n",
     "        print()\n",
     "        tot = parse_total(name, e._measure([name]))\n",
     "        true_name = \"_\".join(name.split(\"_\")[-2:])\n",
     "        rec[bname].append((true_name,tot,acc))\n",
+    "        \n",
     "        print(tot)\n",
     "def draw_pic(picname, names):\n",
     "    \n",
@@ -204,9 +208,9 @@
    "outputs": [],
    "source": [
     "epps = EPPS()\n",
-    "case = 5\n",
+    "case = 1\n",
     "if case  == 1:\n",
-    "    common_filter = [\"cifar10\", \"small\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\"]#\"CvgS200\"]\"small\",\n",
+    "    common_filter = [\"imagenet\", \"small\", \"#Aug_CF\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\", \"DomS2\", \"CvgS10\"]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
     "        epps.load(sname([\"scratch\"]))#, \"small_\"]\n",
@@ -217,25 +221,35 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"hist_ensemble\")\n",
     "        \n",
+    "        \n",
+    "        \n",
     "        epps.load(sname([\"vanilla\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_finetune\")\n",
     "\n",
+    "        epps.load(sname([\"I_normalized_l2\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"inv_dist_normalized\")\n",
+    "\n",
+    "        epps.load(sname([\"normalized_l2\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"proportional_dist_normalized\")\n",
+    "        \n",
     "        epps.load(sname([\"ensemble_5_\", \"snapshot\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"Ensemble_Snapshot\")\n",
     "        \n",
-    "        epps.load(sname([\"#Aug_CF_R\"]))\n",
-    "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_Aug\")\n",
+    "        #epps.load(sname([\"#Aug_CF_R\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_Aug\")\n",
     "\n",
-    "        epps.load(sname([\"#Aug_CF_ADV_R\"]))\n",
-    "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_Aug_ADV\")\n",
+    "        #epps.load(sname([\"#Aug_CF_ADV_R\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_Aug_ADV\")\n",
     "\n",
-    "        epps.load(sname([\"#Aug_ADV\"]))\n",
-    "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_Adv\")\n",
+    "        #epps.load(sname([\"#Aug_ADV\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_Adv\")\n",
     "        \n",
     "        #epps.load(sname([\"scratch\"]))\n",
     "        #epps.set_order(\"sequential\")\n",
@@ -245,6 +259,10 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf\")\n",
     "\n",
+    "        epps.load(sname([\"#lwf1.00e+00\",\"seploss\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_seploss\")\n",
+    "        \n",
     "        epps.load(sname([\"#lwf1.00e+00_unsup\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
@@ -253,34 +271,57 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Correct_Subset\")  \n",
     "\n",
-    "        epps.load(sname([\"#ewc\"]))\n",
-    "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps,\"ewc\")\n",
+    "        #epps.load(sname([\"#ewc\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps,\"ewc\")\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
-    "                 names=[ \"vanilla_scratch\", \"vanilla_finetune\",\"hist_ensemble\", \"Ensemble_Snapshot\", \"vanilla_Aug\", \"vanilla_Adv\", \"vanilla_Aug_ADV\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])   \n",
+    "                 names=[ \"vanilla_scratch\", \n",
+    "                         \"hist_ensemble\", \"Ensemble_Snapshot\", \\\n",
+    "                         \"inv_dist_normalized\", \"proportional_dist_normalized\",\\\n",
+    "                        \"vanilla_finetune\",  \"lwf\", \"lwf_seploss\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"]) #\"vanilla_Adv\", \"ewc\", \"vanilla_Aug_ADV\", \"Ensemble_Snapshot\",]\n",
     "elif case == 2:\n",
-    "    common_filter = [\"cifar10\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\", \"-small\"]#\"CvgS200\"]\"small\",\n",
+    "    common_filter = [\"cifar10\", \"_1.0e-03\",\"CTdata\", \"FixInit\", \"-small\", \"DomS2\"]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
-    "        epps.load(sname([\"scratch\"]))#, \"small_\"]\n",
+    "        epps.load(sname([\"scratch\", \"ResNet18\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_scratch\")\n",
     "        \n",
-    "        epps.load(sname([\"vanilla\"]))#, \"small_\"]\n",
+    "        epps.load(sname([\"vanilla\", \"ResNet18\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_finetune\")\n",
+    "\n",
+    "        epps.load(sname([\"vanilla\", \"ResNet34\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_finetune_ResNet34\")\n",
+    "        \n",
+    "        epps.load(sname([\"I_normalized_l2\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"inv_dist_normalized\")\n",
+    "\n",
+    "        epps.load(sname([\"normalized_l2\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"proportional_dist_normalized\")\n",
     "        \n",
     "        epps.load(sname([\"#Aug_CF_R\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_Aug\")\n",
     "\n",
-    "        epps.load(sname([\"#Aug_CF_ADV_R\"]))\n",
+    "        epps.load(sname([\"ensemble_5_\", \"snapshot\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_Aug_ADV\")\n",
+    "        read_result(epps, \"Ensemble_Snapshot\")\n",
     "\n",
-    "        epps.load(sname([\"#Aug_ADV\"]))\n",
+    "        epps.load(sname([\"#hist_avg\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_Adv\")\n",
+    "        read_result(epps, \"Hist_Ensemble\")\n",
+    "        \n",
+    "        #epps.load(sname([\"#Aug_CF_ADV_R\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_Aug_ADV\")\n",
+    "\n",
+    "        #epps.load(sname([\"#Aug_ADV\"]))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_Adv\")\n",
     "        \n",
     "        #epps.load(sname([\"scratch\"]))\n",
     "        #epps.set_order(\"sequential\")\n",
@@ -290,10 +331,6 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf\")\n",
     "\n",
-    "        #epps.load(sname([\"#lwf1.00e+00_unsup\"]))\n",
-    "        #epps.set_order(\"sequential\")\n",
-    "        #read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
-    "\n",
     "        epps.load(sname([\"#lwf1.00e+00#corrset\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Correct_Subset\")  \n",
@@ -302,7 +339,8 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps,\"ewc\")\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
-    "                 names=[ \"vanilla_scratch\", \"vanilla_finetune\", \"vanilla_Aug\", \"vanilla_Adv\", \"vanilla_Aug_ADV\", \"ewc\",\"lwf_Correct_Subset\", \"lwf\",])# \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])      \n",
+    "                 names=[ \"vanilla_finetune_ResNet34\", \"vanilla_scratch\", \"vanilla_finetune\", \"Ensemble_Snapshot\", \"Hist_Ensemble\", \"vanilla_Aug\", \"inv_dist_normalized\", \"proportional_dist_normalized\", \"lwf_Correct_Subset\", \"lwf\",\"ewc\"])\n",
+    "            # \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])\"vanilla_Adv\",\"vanilla_finetune_LeNet\", \"vanilla_Aug_ADV\", \"lwf_Correct_Subset\",      \"ewc\",\n",
     "elif case ==3:\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
