Add the function of indexing.

--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -210,7 +210,7 @@
     "epps = EPPS()\n",
     "case = 1\n",
     "if case  == 1:\n",
-    "    common_filter = [\"imagenet\", \"small\", \"#Aug_CF\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\", \"DomS2\", \"CvgS10\"]#\"CvgS200\"]\"small\",\n",
+    "    common_filter = [\"imagenet\", \"small\", \"#Aug_CF\", \"ResNet18_1.0e-03\",\"CTdata\", \"FixInit\", \"DomS2\", \"Ep200\", \"CvgS1000\"]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
     "        epps.load(sname([\"scratch\"]))#, \"small_\"]\n",
@@ -221,7 +221,13 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"hist_ensemble\")\n",
     "        \n",
-    "        \n",
+    "        epps.load(sname([\"mixL_avg\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"avg_label\")        \n",
+    "\n",
+    "        #epps.load(sname([\"lossl1\"]))#, \"small_\"]\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"loss_l1\")  \n",
     "        \n",
     "        epps.load(sname([\"vanilla\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
@@ -262,6 +268,14 @@
     "        epps.load(sname([\"#lwf1.00e+00\",\"seploss\"]))\n",
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_seploss\")\n",
+    "\n",
+    "        epps.load(sname([\"#lwf2.00e+00\",\"seploss\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_seploss_x2\")\n",
+    "\n",
+    "        epps.load(sname([\"#lwf1.00e+01\",\"seploss\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_seploss_x10\")\n",
     "        \n",
     "        epps.load(sname([\"#lwf1.00e+00_unsup\"]))\n",
     "        epps.set_order(\"sequential\")\n",
@@ -271,16 +285,24 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"lwf_Correct_Subset\")  \n",
     "\n",
+    "        epps.load(sname([\"#lwf2.00e+00#corrset\"]))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_Correct_Subset_x2\")  \n",
+    "        \n",
     "        #epps.load(sname([\"#ewc\"]))\n",
     "        #epps.set_order(\"sequential\")\n",
     "        #read_result(epps,\"ewc\")\n",
+    "        #\"hist_ensemble\",\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
     "                 names=[ \"vanilla_scratch\", \n",
-    "                         \"hist_ensemble\", \"Ensemble_Snapshot\", \\\n",
+    "                          \"Ensemble_Snapshot\", \\\n",
     "                         \"inv_dist_normalized\", \"proportional_dist_normalized\",\\\n",
-    "                        \"vanilla_finetune\",  \"lwf\", \"lwf_seploss\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"]) #\"vanilla_Adv\", \"ewc\", \"vanilla_Aug_ADV\", \"Ensemble_Snapshot\",]\n",
+    "                        \"vanilla_finetune\", \"avg_label\", \"lwf\",  \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"]) #\"vanilla_Adv\", \"ewc\", \"vanilla_Aug_ADV\", \"Ensemble_Snapshot\",]\n",
+    "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
+    "                 names=[\"lwf\", \"lwf_seploss\", \"lwf_seploss_x10\",\"lwf_Correct_Subset_x2\",\"lwf_Correct_Subset\"])\n",
+    "        #\"lwf_seploss\", \"loss_l1\"\n",
     "elif case == 2:\n",
-    "    common_filter = [\"cifar10\", \"_1.0e-03\",\"CTdata\", \"FixInit\", \"-small\", \"DomS2\"]#\"CvgS200\"]\"small\",\n",
+    "    common_filter = [\"cifar10\", \"_1.0e-03\",\"CTdata\", \"FixInit\", \"small\", \"DomS2\",]#\"CvgS200\"]\"small\",\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
     "        epps.load(sname([\"scratch\", \"ResNet18\"]))#, \"small_\"]\n",
@@ -291,9 +313,13 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps, \"vanilla_finetune\")\n",
     "\n",
-    "        epps.load(sname([\"vanilla\", \"ResNet34\"]))#, \"small_\"]\n",
+    "        epps.load(sname([\"ResNet18\", \"lossl1\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
-    "        read_result(epps, \"vanilla_finetune_ResNet34\")\n",
+    "        read_result(epps, \"vanilla_finetune_l1\")\n",
+    "        \n",
+    "        \"\"\"epps.load(sname([\"vanilla\", \"ResNet34\"]))#, \"small_\"]\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_finetune_ResNet34\")\"\"\"\n",
     "        \n",
     "        epps.load(sname([\"I_normalized_l2\"]))#, \"small_\"]\n",
     "        epps.set_order(\"sequential\")\n",
@@ -339,8 +365,8 @@
     "        epps.set_order(\"sequential\")\n",
     "        read_result(epps,\"ewc\")\n",
     "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
-    "                 names=[ \"vanilla_finetune_ResNet34\", \"vanilla_scratch\", \"vanilla_finetune\", \"Ensemble_Snapshot\", \"Hist_Ensemble\", \"vanilla_Aug\", \"inv_dist_normalized\", \"proportional_dist_normalized\", \"lwf_Correct_Subset\", \"lwf\",\"ewc\"])\n",
-    "            # \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])\"vanilla_Adv\",\"vanilla_finetune_LeNet\", \"vanilla_Aug_ADV\", \"lwf_Correct_Subset\",      \"ewc\",\n",
+    "                 names=[ \"vanilla_scratch\", \"vanilla_finetune\", \"Ensemble_Snapshot\", \"Hist_Ensemble\", \"vanilla_Aug\", \"vanilla_finetune_l1\", \"lwf_Correct_Subset\", \"lwf\",\"ewc\"])\n",
+    "        # \"vanilla_finetune_ResNet34\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])\"vanilla_Adv\",\"vanilla_finetune_LeNet\", \"vanilla_Aug_ADV\", \"lwf_Correct_Subset\",      \"ewc\",\"inv_dist_normalized\", \"proportional_dist_normalized\",\n",
     "elif case ==3:\n",
     "    for i in range(1):\n",
     "        rec = {}\n",
